--- a/widgets_app/index.html
+++ b/widgets_app/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="./stylesheets/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   <script src="bundle.js"></script>
 </head>
 <body>
